<resources>
    <string name="app_name" translatable="false">Become</string>
    <string name="facebook_app_id" translatable="false">1513592482314414</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1513592482314414</string>
    <string name="new_activityLabel">New Activity</string>
    <string name="descriptionLabel">Description (optional)</string>
    <string name="activity_nameLabel">Name</string>
    <string name="cancelButton">Cancel</string>
    <string name="doneButton">Done</string>
    <string name="start_at">Start at:</string>
    <string name="end_at">End at:</string>
    <string name="select_time">Select time</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="activity_name">Name</string>
    <string name="activity_description">Description</string>
    <string name="theme">Theme:</string>
    <string name="modifytext">Modify activity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="signup">Sign up!</string>
    <string name="google">Continue with Google</string>
    <string name="community">Community</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <string-array name="themesValues">
        <item>Music</item>
        <item>Sport</item>
        <item>Sleeping</item>
        <item>Cooking</item>
        <item>Working</item>
        <item>Entertainment</item>
        <item>Plants</item>
        <item>Other</item>
    </string-array>

    <string-array name="dayValues">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="notNull">This field cannot be null</string>
    <string name="emailExists">This email is already logged</string>
    <string name="userNotMatch">Username and password do not match</string>
    <string name="passwords">Passwords not match</string>
    <string name="activityCreated">Activity created</string>
    <string name="routineCreated">Routine created</string>
    <string name="activityModified">Activity modified</string>
    <string name="errorTime">Error: Start time cannot be subsequent to end time</string>
    <string name="errorDay">Error: Start day cannot be subsequent to end day</string>
    <string name="overlapping">Error: Another activity belongs to that time interval</string>
    <string name="new_routine">New routine</string>
    <string name="noRoutineSelected">You don\'t have any routine selected!</string>
    <string name="adopt_new_habits">Adopt new habits and make a change!</string>
    <string name="noActivities">You don\'t have any activities programmed for today.</string>
    <string name="noRoutines">You don\'t have any routine.</string>
    <string name="shortPassword">The password must have at least 6 characters</string>
    <string name="notAValidEmail">This is not a valid email</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="log_out">Log out</string>
    <string name="change_password">Change password</string>
    <string name="permissionDenied">You have previously denied Become to access your photos, go to settings and change permissions to access this feature.</string>
    <string name="permissionDeniedTitle">Permission denied</string>
    <string name="existingRoutineName">Another routine with same name already exists</string>
    <string name="wrongPassword">Wrong password</string>
    <string name="accountDeleted">Account deleted successfully</string>

    <string name="sport">SPORT</string>
    <string name="sleeping">SLEEPING</string>
    <string name="cooking">COOKING</string>
    <string name="hours_of_dedication">Hours of dedication</string>
    <string name="working">WORKING AND STUDYING</string>
    <string name="music">MUSIC</string>
    <string name="entertainment">ENTERTAINMENT</string>
    <string name="plants">PLANTS AND GARDENING</string>
    <string name="other">OTHER</string>

    <string name="shortMonday">MON</string>
    <string name="shortTuesday">TUE</string>
    <string name="shortWednesday">WED</string>
    <string name="shortThursday">THUR</string>
    <string name="shortFriday">FRI</string>
    <string name="shortSaturday">SAT</string>
    <string name="shortSunday">SUN</string>
    <string name="deleteRoutineConfirmation">Do you really want to delete this routine and all its activities?</string>
    <string name="deleteRoutine">Delete routine</string>
    <string name="routine_distribution">Routine distribution</string>
    <string name="emailSent">An email has been sent to reset your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="verifyEmail">Registered successfully. Please check your email and verify your account before using the app.</string>
    <string name="emailNotRegistered">This email does not belong to any registered account</string>
    <string name="loginfailed">Mail or password are not correct, make sure to verify your email</string>
    <string name="streak">DAYS STREAK!</string>
    <string name="congratsStreak">Congrats! You are on a</string>
    <string name="backButton">Back</string>
    <string name="reset_password">Reset password</string>
    <string name="currentPassword">Current password</string>
    <string name="newPassword">New password</string>
    <string name="passChanged">Password was changed successfully.</string>
    <string name="change_username">Change username</string>
    <string name="username_changed">Username changed successfully</string>
    <string name="congrats">Congratulations!</string>
    <string name="new_trophy_won">New trophy won</string>
    <string name="deselectToRemove">Deselect this routine to remove it</string>
    <string name="CreateFirstRoutine">Rookie</string>
    <string name="HourMusic5">A star is born</string>
    <string name="HourSport5">Slow walker</string>
    <string name="HourSleeping5">Student life</string>
    <string name="HourCooking5">Baguette supporter</string>
    <string name="HourWorking5" >Slothful</string>
    <string name="HourEntertainment5" >The Little Prince</string>
    <string name="HourPlants5" >Cactuses killer</string>
    <string name="HourOther5" translatable="false">Bohemian Rhapsody</string>
    <string name="HourSport10" >Kobe Bryant</string>
    <string name="HourSleeping10" >Sleep like a baby</string>
    <string name="HourCooking10" >Fish and Chips</string>
    <string name="HourWorking10" >Capitalism slave</string>
    <string name="HourEntertainment10" >The Lord of the Films</string>
    <string name="HourOther10" >Divergent</string>
    <string name="HourMusic10">Little Mozart</string>
    <string name="HourPlants10">Vertical garden</string>
    <string name="CreateFirstRoutineDescription">Create your first routine</string>
    <string name="HourMusic5Description">Dedicate 5 hours per week to musical activities</string>
    <string name="HourSport5Description">Dedicate 5 hours per week to sport</string>
    <string name="HourSleeping5Description">Dedicate 30 hours per week to sleep</string>
    <string name="HourCooking5Description">Dedicate 5 hours per week to cook</string>
    <string name="HourWorking5Description">Dedicate 5 hours per week to work</string>
    <string name="HourEntertainment5Description">Dedicate 5 hours per week to entertaining activities</string>
    <string name="HourPlants5Description">Dedicate 1 hour per week to your plants</string>
    <string name="HourOther5Description">Dedicate 5 hours per week to other activities</string>
    <string name="HourMusic10Description">Dedicate 10 hours per week to musical activities</string>
    <string name="HourSport10Description">Dedicate 10 hours per week to sport</string>
    <string name="HourSleeping10Description">Dedicate 56 hours per week to sleep</string>
    <string name="HourCooking10Description">Dedicate 10 hours per week to cook</string>
    <string name="HourWorking10Description">Dedicate 10 hours per week to work</string>
    <string name="HourEntertainment10Description">Dedicate 10 hours per week to entertaining activities</string>
    <string name="HourPlants10Description">Dedicate 5 hours per week to your plants</string>
    <string name="HourOther10Description">Dedicate 10 hours per week to other activities</string>
    <string name="DONE">DONE</string>
    <string name="UNDONE">NOT DONE</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="changeVisibility">Setting a routine private</string>
    <string name="changeVisibilityDescription">Changing this routine\'s visibility to private will make it stop appearing in the community tab and will erase its ratings, do you want to proceed?</string>
    <string name="voteRoutine">Vote</string>
    <string name="routineAlreadyVoted">You have already voted this routine</string>
    <string name="voteOwnRoutine">You cannot vote your own routine</string>
    <string name="noRecommendations">You have no recommendations</string>
    <string name="recommendationMoreTime">You should dedicate more time to this, at least</string>
    <string name="recommendationsLessTime">Nous recommandons de ne pas faire plus de</string>
    <string name="recommendationsOkTime">You are doing great!</string>
    <string name="downOk">Routine downloaded successfully</string>
    <string name="recommendations">Recommendations</string>
    <string name="ActivitiesPerDay1">Shake a leg!</string>
    <string name="ActivitiesPerDay1Description">Have at least one activity per day</string>
    <string name="ActivitiesPerDay5">Multitasking</string>
    <string name="ActivitiesPerDay5Description">Have at least 5 activities per day</string>
    <string name="HoursPerDay5">Getting serious</string>
    <string name="HoursPerDay5Description">Have at least 5 hours of activities per day</string>
    <string name="HoursPerDay10">The more the merrier</string>
    <string name="HoursPerDay10Description">Have at least 10 hours of different activities per day</string>
    <string name="ShareRoutine">Communist</string>
    <string name="ShareRoutineDescription">Share your first routine so others can use it</string>
    <string name="DownloadRoutine">Thief</string>
    <string name="DownloadRoutineDescription">Download a routine from the community</string>
    <string name="VoteRoutine">The judge</string>
    <string name="VoteRoutineDescription">Vote a routine from the community</string>

</resources>