<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id = "@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    >

    <TextView
        android:id="@+id/newTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sourcesanspro_regular"
        android:text="@string/new_routine"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/activityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sourcesanspro_light"
        android:text="@string/activity_nameLabel"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:fontFamily="@font/sourcesanspro_regular"
        android:textSize="18sp"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/black"
        android:background="@drawable/edittext_background"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/cancelButton"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textSize="18dp"
            android:textAllCaps="false"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/doneButton"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textSize="18dp"
            android:textAllCaps="false"/>

    </LinearLayout>


</LinearLayout>