<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id = "@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    >

    <TextView
        android:id="@+id/updateProfilePic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sourcesanspro_regular"
        android:text="@string/change_profile_photo"
        android:textColor="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/changePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sourcesanspro_regular"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sourcesanspro_regular"
        android:text="@string/log_out"
        android:textColor="@color/darkred"
        android:clickable="true"
        android:focusable="true"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/deleteAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="Delete account"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            android:textColor="@color/darkred"
            android:textSize="22sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_gravity="right"/>

    </LinearLayout>

    <EditText
        android:id="@+id/passText"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_padlock"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/sourcesanspro_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doneButton"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/sourcesanspro_regular"
        android:layout_gravity="right"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:visibility="gone"/>

</LinearLayout>