<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id = "@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    >

    <TextView
        android:id="@+id/newTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sourcesanspro_regular"
        android:text="@string/new_activityLabel"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/activityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sourcesanspro_light"
        android:text="@string/activity_nameLabel"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/sourcesanspro_regular"
        android:textSize="18sp"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/black"
        android:autofillHints="" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sourcesanspro_light"
        android:text="@string/descriptionLabel"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/sourcesanspro_regular"
        android:textSize="18sp"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/themeLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:fontFamily="@font/sourcesanspro_light"
            android:text="@string/theme"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/themeSpinner"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="60dp"
            android:background="@drawable/spinner_background"
            android:fontFamily="@font/sourcesanspro_light"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:layout_marginRight="5dp">

            <TextView
                android:id="@+id/startLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/sourcesanspro_light"
                android:text="@string/start_at"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/dayStartSpinner"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinner_background"
                android:fontFamily="@font/sourcesanspro_light"
                />

            <TextView
                android:id="@+id/startTime"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinner_background"
                android:fontFamily="@font/sourcesanspro_regular"
                android:gravity="center"
                android:text="@string/select_time"
                android:textColor="@color/black"
                android:textSize="18sp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <TextView
                android:id="@+id/endLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/sourcesanspro_light"
                android:text="@string/end_at"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/dayEndSpinner"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinner_background"
                android:fontFamily="@font/sourcesanspro_light"
                />

            <TextView
                android:id="@+id/endTime"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinner_background"
                android:fontFamily="@font/sourcesanspro_regular"
                android:gravity="center"
                android:text="@string/select_time"
                android:textColor="@color/black"
                android:textSize="18sp"
                 />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/cancelButton"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textSize="18dp"
            android:textAllCaps="false"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/doneButton"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textSize="18dp"
            android:textAllCaps="false"/>

    </LinearLayout>


</LinearLayout>