<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/iconbecome"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp"
            tools:srcCompat="@drawable/logo_title" />

        <EditText
            android:id="@+id/userText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:background="@drawable/edittext_background"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="15dp"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/passText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="textPassword"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:hint="@string/password"
            android:background="@drawable/edittext_background"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="15dp"
            android:drawableLeft="@drawable/ic_padlock"
            android:drawablePadding="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="50dp">

            <Button
                android:id="@+id/logInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/custom_button"
                android:drawableLeft="@drawable/ic_login"
                android:drawablePadding="10dp"
                android:fontFamily="@font/sourcesanspro_regular"
                android:paddingHorizontal="20dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/googleLoginButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/custom_button"
                android:drawableLeft="@drawable/ic_search"
                android:drawablePadding="10dp"
                android:fontFamily="@font/sourcesanspro_regular"
                android:paddingHorizontal="20dp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginVertical="15dp">

            <TextView
                android:id="@+id/notRegistered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sourcesanspro_regular"
                android:textSize="18sp"
                android:textColor="@color/black"

                android:text="@string/not_registered_yet" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/sourcesanspro_regular"
                android:textSize="18sp"
                android:textColor="@color/orange"
                android:text="@string/signup"
                android:layout_marginStart="10dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>