<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iconbecome"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/logo_title"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textSize="26dp"
            android:textColor="@color/black"
            android:text="@string/reset_password"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:background="@drawable/edittext_background"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="15dp"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backButton"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/sourcesanspro_regular"
                android:textSize="18dp"
                android:layout_gravity="left"
                android:textAllCaps="false"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <Button
                android:id="@+id/doneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doneButton"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/sourcesanspro_regular"
                android:layout_gravity="right"
                android:textSize="18dp"
                android:textAllCaps="false"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_marginTop="50dp"
            android:visibility="gone"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/emailSentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:layout_marginTop="50dp"
            android:textSize="18dp"
            android:textAlignment="center"
            android:textColor="@color/softgray"
            android:text="@string/emailSent"
            android:layout_marginHorizontal="50dp"
            android:gravity="center_horizontal"
            android:visibility="gone"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>